--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "sonarsource.sonarlint-vscode",
     "eamodio.gitlens",
     "christian-kohler.npm-intellisense",
-    "ms-azuretools.vscode-docker"
+    "ms-azuretools.vscode-docker",
+    "bradlc.vscode-tailwindcss"
   ]
 }
