--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -27,6 +27,8 @@
     "@nestjs/microservices": "^7.6.18",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/platform-fastify": "^7.6.18",
+    "@nestjs/swagger": "^4.8.1",
+    "fastify-swagger": "^4.8.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
