--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       context: ./api-gateway
       dockerfile: DockerFile
       target: development
+    command: >
+      sh -c "npm i && npm run start:dev"
     volumes:
       - ./api-gateway:/usr/local/api-gateway
     networks:
@@ -31,6 +33,8 @@ services:
       context: ./webapp
       dockerfile: DockerFile
       target: development
+    command: >
+      sh -c "npm i && npm run start"
     volumes:
       - ./webapp:/usr/local/webapp
     networks:
@@ -50,6 +54,8 @@ services:
       context: ./services/users-service
       dockerfile: DockerFile
       target: development
+    command: >
+      sh -c "npm i && npm run start"
     volumes:
       - ./services/users-service:/usr/local/users-service
     networks:
@@ -78,6 +84,11 @@ services:
     expose:
       - 27017
     command: mongod --quiet --logpath /dev/null
+
+  # redis:
+  #   image: redis
+  #   expose:
+  #       - "6379"
 
 networks:
   frontend:
