--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "A sample REST APP with API Gateway and backend microservices.",
   "scripts": {
+    "prepare": "husky install",
+    "lint:api-gateway": "npm run lint --prefix api-gateway",
+    "lint:service:users-service": "npm run lint --prefix services/users-service",
+    "lint:webapp": "npm run lint --prefix webapp",
+    "lint": "npm-run-all lint:*",
     "docker:build": "docker-compose build",
     "docker:start": "docker-compose start",
     "docker:stop": "docker-compose stop",
@@ -11,9 +16,9 @@
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs --tail=0 --follow",
     "_": "***************************",
-    "1": "HOW TO RUN THE PROJECT",
+    "_1": "HOW TO RUN THE PROJECT",
     ".": "***************************",
-    "bootstrap": "npm-run-all docker:build docker:up docker:logs",
+    "bootstrap": "npm-run-all prepare docker:build docker:up docker:logs",
     "start": "npm-run-all docker:start docker:logs",
     "stop": "npm-run-all docker:stop",
     "restart": "npm-run-all docker:stop docker:start docker:logs"
@@ -21,6 +26,7 @@
   "author": "Edgar Alves",
   "license": "MIT",
   "devDependencies": {
+    "husky": "^7.0.1",
     "npm-run-all": "^4.1.5"
   }
 }
