--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "_": "***************************",
     "_1": "HOW TO RUN THE PROJECT",
     ".": "***************************",
-    "bootstrap": "npm-run-all prepare docker:build docker:up docker:logs",
+    "bootstrap": "npm-run-all docker:build docker:up docker:logs",
     "start": "npm-run-all docker:start docker:logs",
     "stop": "npm-run-all docker:stop",
     "restart": "npm-run-all docker:stop docker:start docker:logs"
