--- a/webapp/.eslintrc.json
+++ b/webapp/.eslintrc.json
@@ -1,12 +1,19 @@
 {
   "root": true,
-  "ignorePatterns": ["projects/**/*"],
+  "ignorePatterns": ["projects/**/*", "*.d.ts"],
   "overrides": [
     {
       "files": ["*.ts"],
+      "parserOptions": {
+        "project": ["tsconfig.json", "e2e/tsconfig.json"],
+        "createDefaultProgram": true
+      },
       "extends": [
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-requiring-type-checking"
       ],
       "rules": {
         "@angular-eslint/component-selector": [
@@ -26,7 +33,9 @@
           }
         ],
         "indent": ["error", 2],
-        "quotes": ["error", "single", "avoid-escape"]
+        "quotes": ["error", "single", "avoid-escape"],
+        "no-unbound-method": 0,
+        "@typescript-eslint/unbound-method": "off"
       }
     },
     {
