Angular update to 12.2.1 NestJS update to 8.0.6 Tailwind update to 2.2.7 Add headwind vscode extension to sort tailwind classes

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "eamodio.gitlens",
     "christian-kohler.npm-intellisense",
     "ms-azuretools.vscode-docker",
-    "bradlc.vscode-tailwindcss"
+    "bradlc.vscode-tailwindcss",
+    "heybourn.headwind"
   ]
 }
