--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,44 +11,45 @@
     "test": "ng test",
     "lint": "ng lint && npm run prettier:check",
     "e2e": "ng e2e",
-    "generate-icons": "svg-generator"
+    "generate-icons": "svg-generator && eslint --fix \"src/app/svg/**/*.ts\""
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.1",
-    "@angular/common": "~12.1.1",
-    "@angular/compiler": "~12.1.1",
-    "@angular/core": "~12.1.1",
-    "@angular/forms": "~12.1.1",
-    "@angular/platform-browser": "~12.1.1",
-    "@angular/platform-browser-dynamic": "~12.1.1",
-    "@angular/router": "~12.1.1",
+    "@angular/animations": "~12.2.1",
+    "@angular/common": "~12.2.1",
+    "@angular/compiler": "~12.2.1",
+    "@angular/core": "~12.2.1",
+    "@angular/forms": "~12.2.1",
+    "@angular/platform-browser": "~12.2.1",
+    "@angular/platform-browser-dynamic": "~12.2.1",
+    "@angular/router": "~12.2.1",
     "@ngneat/svg-icon": "^3.2.0",
-    "@ngrx/effects": "^12.2.0",
-    "@ngrx/entity": "^12.2.0",
-    "@ngrx/store": "^12.2.0",
+    "@ngrx/effects": "^12.4.0",
+    "@ngrx/entity": "^12.4.0",
+    "@ngrx/store": "^12.4.0",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "rxjs": "~6.6.0",
-    "tailwindcss": "^2.2.4",
-    "tslib": "^2.3.0",
+    "tailwindcss": "^2.2.7",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.1",
-    "@angular-eslint/builder": "12.3.0",
-    "@angular-eslint/eslint-plugin": "12.3.0",
-    "@angular-eslint/eslint-plugin-template": "12.3.0",
-    "@angular-eslint/schematics": "12.3.0",
-    "@angular-eslint/template-parser": "12.3.0",
-    "@angular/cli": "~12.1.1",
-    "@angular/compiler-cli": "~12.1.1",
-    "@types/jasmine": "~3.8.1",
-    "@types/node": "^16.3.1",
-    "@typescript-eslint/eslint-plugin": "4.28.3",
-    "@typescript-eslint/parser": "4.28.3",
+    "@angular-devkit/build-angular": "~12.2.1",
+    "@angular-eslint/builder": "12.3.1",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/schematics": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
+    "@angular/cli": "~12.2.1",
+    "@angular/compiler-cli": "~12.2.1",
+    "@ngneat/svg-generator": "^2.0.0",
+    "@types/jasmine": "^3.8.2",
+    "@types/node": "^16.6.1",
+    "@typescript-eslint/eslint-plugin": "4.29.1",
+    "@typescript-eslint/parser": "4.29.1",
     "autoprefixer": "^10.3.1",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
@@ -58,9 +59,8 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "^2.3.2",
     "protractor": "~7.0.0",
-    "ts-node": "~10.1.0",
-    "typescript": "~4.3.5",
-    "@ngneat/svg-generator": "^2.0.0"
+    "ts-node": "~10.2.0",
+    "typescript": "~4.3.5"
   },
   "svgGenerator": {
     "outputPath": "./src/app/svg",
