Change Karma and Jasmine to Jest in webapp Updated versions

--- a/webapp/.eslintrc.json
+++ b/webapp/.eslintrc.json
@@ -32,7 +32,7 @@
             "type": "attribute"
           }
         ],
-        "indent": ["error", 2],
+        "indent": "off",
         "quotes": ["error", "single", "avoid-escape"],
         "no-unbound-method": 0,
         "@typescript-eslint/unbound-method": "off"
