--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,7 +8,9 @@
     "build:prod": "NODE_ENV=production ng build --prod",
     "prettier:check": "prettier --check \"src/**/*.ts\" \"e2e/**/*.ts\"",
     "prettier:format": "prettier --write \"src/**/*.ts\" \"e2e/**/*.ts\"",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage=true",
     "lint": "npm run lint:code && npm run lint:style",
     "lint:code": "ng lint && npm run prettier:check",
     "lint:style": "stylelint \"src/**/*.scss\"",
@@ -17,14 +19,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.1",
-    "@angular/common": "~12.2.1",
-    "@angular/compiler": "~12.2.1",
-    "@angular/core": "~12.2.1",
-    "@angular/forms": "~12.2.1",
-    "@angular/platform-browser": "~12.2.1",
-    "@angular/platform-browser-dynamic": "~12.2.1",
-    "@angular/router": "~12.2.1",
+    "@angular/animations": "~12.2.7",
+    "@angular/common": "~12.2.7",
+    "@angular/compiler": "~12.2.7",
+    "@angular/core": "~12.2.7",
+    "@angular/forms": "~12.2.7",
+    "@angular/platform-browser": "~12.2.7",
+    "@angular/platform-browser-dynamic": "~12.2.7",
+    "@angular/router": "~12.2.7",
     "@ngneat/svg-icon": "^3.2.0",
     "@ngrx/effects": "^12.4.0",
     "@ngrx/entity": "^12.4.0",
@@ -32,39 +34,35 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "rxjs": "~6.6.0",
-    "tailwindcss": "^2.2.7",
+    "tailwindcss": "^2.2.15",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.1",
-    "@angular-eslint/builder": "12.3.1",
-    "@angular-eslint/eslint-plugin": "12.3.1",
-    "@angular-eslint/eslint-plugin-template": "12.3.1",
-    "@angular-eslint/schematics": "12.3.1",
-    "@angular-eslint/template-parser": "12.3.1",
-    "@angular/cli": "~12.2.1",
-    "@angular/compiler-cli": "~12.2.1",
+    "@angular-builders/jest": "12.1.2",
+    "@angular-devkit/build-angular": "~12.2.6",
+    "@angular-eslint/builder": "12.5.0",
+    "@angular-eslint/eslint-plugin": "12.5.0",
+    "@angular-eslint/eslint-plugin-template": "12.5.0",
+    "@angular-eslint/schematics": "12.5.0",
+    "@angular-eslint/template-parser": "12.5.0",
+    "@angular/cli": "~12.2.6",
+    "@angular/compiler-cli": "~12.2.7",
     "@ngneat/svg-generator": "^2.0.0",
-    "@types/jasmine": "^3.8.2",
-    "@types/node": "^16.6.1",
-    "@typescript-eslint/eslint-plugin": "4.29.1",
-    "@typescript-eslint/parser": "4.29.1",
-    "autoprefixer": "^10.3.1",
+    "@types/jest": "27.0.2",
+    "@types/node": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
+    "autoprefixer": "^10.3.5",
     "eslint": "^7.32.0",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "prettier": "^2.3.2",
+    "jest": "27.2.1",
+    "jest-mock-extended": "^2.0.4",
+    "prettier": "^2.4.1",
     "protractor": "~7.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.20.1",
-    "ts-node": "~10.2.0",
+    "stylelint-scss": "^3.21.0",
+    "ts-node": "~10.2.1",
     "typescript": "~4.3.5"
   },
   "svgGenerator": {
